--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -4,48 +4,105 @@
 }
 
 body {
-	font-size: 16px;
-	color: #fff;
-	background-color: #d0f4de;
-	font-family: 'Oxygen', sans-serif;
+	background-color: #fcf6bd;
 }
 
-#bs-example-navbar-collapse-1 ul li a {
-	color: black;
+.container-fluid{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar{
+	border-radius: 0px;
+	border: 0;
 	background-color: #e4c1f9;
 }
 
-#bs-example-navbar-collapse-1 ul li a:hover {
-	color: #ff99c8;
+.navbar-brand{
+  font-size: 25px;
+  color: black;
+  padding-left: 30px;
+  font-family: Geneva, sans-serif;
+}
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+	border: 3px solid white;
+	margin-right: 25px;
+}
+
+.icon-bar{
 	background-color: white;
 }
 
-.navbar {
-	border: 0;
-	border-radius: 0;
-	background-color: #fec8c3;
+.main-title{
+  margin-bottom: 15px;
+  color: black;
+  font-size: 50px;
+  font-family: Geneva, sans-serif;
+  font-weight: bold;
 }
 
-.text-center {
+li{
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.food-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: #ff99c8;
+	border-bottom: 1px solid black;
+	color: black;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+}
+
+.food-item:hover{
+	background-color: gray;
+	color: purple;
+	font-weight: bold;
 }
 
 .container {
-	background-color: #fcf6bd;
-	color: black;
+	width: 100%;
 	height: 1000px;
-	padding-top: 15px;
-	text-align: center;
 }
 
-.container p {
-	text-align: left;
-	padding-top: 10px;
+
+.row{
+	margin: 20px;
 }
 
-h1 {
-	padding-bottom: 15px;
+.text-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
 	color: black;
+	background-color: #d0f4de;
+	font-family: Geneva, sans-serif;
+	padding: 20px;
+	border: 1px solid black;
+}
+
+.food-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: Geneva, sans-serif;
 }
